fixed table overlap bug

--- a/css/index.css
+++ b/css/index.css
@@ -140,7 +140,7 @@ body .container {
 body .container .section {
   display: flex;
 }
-@media (max-width: 510px) {
+@media (max-width: 555px) {
   body .container .section {
     flex-direction: column;
   }
@@ -149,7 +149,7 @@ body .container .section div {
   padding: 0 0.2em;
   width: 100%;
 }
-@media (max-width: 510px) {
+@media (max-width: 555px) {
   body .container .section div {
     width: inherit;
     height: 100%;
@@ -176,6 +176,9 @@ header {
   background-color: #23293B;
   color: #F6F7F8;
   height: 5em;
+  position: fixed;
+  width: 100%;
+  top: 0;
 }
 @media (max-width: 800px) {
   header {
@@ -207,7 +210,7 @@ header .header-left {
     width: 30em;
   }
 }
-@media (max-width: 510px) {
+@media (max-width: 555px) {
   header .header-left {
     width: 17em;
   }
@@ -228,6 +231,12 @@ footer nav {
 .section {
   height: 10%;
   padding-top: 1.5em;
+  margin-top: 4em;
+}
+@media (max-width: 800px) {
+  .section {
+    margin-top: 7em;
+  }
 }
 .section .left-div {
   display: flex;
@@ -260,7 +269,7 @@ footer nav {
 .section .mid-div .img-center {
   height: 100%;
 }
-@media (max-width: 510px) {
+@media (max-width: 555px) {
   .section .mid-div .img-center {
     display: none;
   }
