--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,11 @@
 .section {
     height: 10%;
     padding-top: 1.5em;
+    margin-top: 4em;
+
+    @media @tablet {
+        margin-top: 7em;
+    } 
 
     .left-div {
         display: flex;
