--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,6 +4,9 @@ header {
     background-color: @nav-border;
     color: @nav-font;
     height: 5em;
+    position: fixed;
+    width: 100%;
+    top: 0;
 
     @media @tablet {
         flex-direction: column;
