--- a/less/variables.less
+++ b/less/variables.less
@@ -27,4 +27,4 @@
 
 // Mobile var
 @tablet: ~"(max-width: 800px)";
-@phone: ~"(max-width: 510px)";
+@phone: ~"(max-width: 555px)";
